--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "~4.9.x"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.10.x",
+    "npm": "1.4.9"
   },
   "repository": {
     "type": "git",
